[project]
name = "pa4-document-analyst"
version = "0.1.0"
description = "CS4603 PA4 — LangGraph multi-agent Document Analyst deployed on Databricks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ─── LangGraph / LangChain core ──────────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    # ─── Databricks integrations (LLM, embeddings, Vector Search) ────────────
    "databricks-langchain>=0.1.0",
    "databricks-vectorsearch>=0.40",
    "databricks-sdk>=0.23.0",
    # ─── MCP tool server / client ────────────────────────────────────────────
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.0.5",
    # ─── Deployment / tracking ───────────────────────────────────────────────
    "mlflow>=2.16.0",
    "openai>=1.40.0",
    # ─── Utilities ───────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "ipykernel>=6.29.0",
]
# Bonus B — databricks-agents SDK deployment path
agents = [
    "databricks-agents>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "rag", "client", "tools", "deployment"]
# config.py is a top-level module imported everywhere as `from config import ...`
only-include = ["agent", "rag", "client", "tools", "deployment", "config.py"]
